--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,13 +64,14 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.22f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Script\Player\Horse.cs" />
-    <Compile Include="Assets\Script\Player\DestroyObject.cs" />
+    <Compile Include="Assets\Script\Enemy\Dog.cs" />
+    <Compile Include="Assets\Script\Enemy\DestroyObject.cs" />
+    <Compile Include="Assets\Script\Boy\Boy.cs" />
+    <Compile Include="Assets\Script\Boy\BoyDamage.cs" />
     <Compile Include="Assets\Script\System\SceneLoader.cs" />
-    <Compile Include="Assets\Script\Player\Deer.cs" />
-    <Compile Include="Assets\Script\Enemy\Boy.cs" />
-    <Compile Include="Assets\Script\Player\Cow.cs" />
-    <Compile Include="Assets\Script\Player\Dog.cs" />
+    <Compile Include="Assets\Script\Enemy\Cow.cs" />
+    <Compile Include="Assets\Script\Enemy\Deer.cs" />
+    <Compile Include="Assets\Script\Enemy\Horse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
